force-app/main/default/objects/Country_Mapping__mdt/Country_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Country Mapping</label>
    <pluralLabel>Country Mappings</pluralLabel>
</CustomObject>