force-app/main/default/objects/Country_Mapping__mdt/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>CountryCodeNumeric</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>