force-app/main/default/objects/Country_Mapping__mdt/fields/CountryCodeAlpha2__c.field-meta.xml
<CustomField>
    <fullName>CountryCodeAlpha2__c</fullName>
    <label>Country Alpha2</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>