force-app/main/default/objects/Country_Mapping__mdt/fields/CountryCodeAlpha3__c.field-meta.xml
<CustomField>
    <fullName>CountryCodeAlpha3__c</fullName>
    <label>CountryCodeAlpha3</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>