force-app/main/default/objects/Country_Mapping__mdt/fields/OfficialName__c.field-meta.xml
<CustomField>
    <fullName>OfficialName__c</fullName>
    <label>OfficialName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>